--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,8 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
+    /* background: #F4DFC8; */
+
 }
 
 .text-div {
